--- a/pom.xml
+++ b/pom.xml
@@ -43,8 +43,8 @@
 	</scm>
 
 	<properties>
-		<wicket.version>6.6.0</wicket.version>
-		<junit.version>4.8.2</junit.version>
+		<wicket.version>6.7.0</wicket.version>
+		<junit.version>4.11</junit.version>
 		<jetty.version>7.6.3.v20120416</jetty.version>
 	</properties>
 
@@ -57,8 +57,8 @@
 			</snapshots>
 		</repository>
 		<repository>
-			<id>Apache Nexus Staging</id>
-			<url>https://repository.apache.org/content/repositories/orgapachewicket-146/</url>
+			<id>Wicket Nexus Staging</id>
+			<url>https://repository.apache.org/content/repositories/orgapachewicket-014/</url>
 		</repository>
 	</repositories>
 
