--- a/wicket-jquery-ui-samples/pom.xml
+++ b/wicket-jquery-ui-samples/pom.xml
@@ -17,7 +17,7 @@
 		<!-- JQUERY-UI DEPENDENCIES -->
 		<dependency>
 			<groupId>com.googlecode.wicket-jquery-ui</groupId>
-			<artifactId>wicket-jquery-ui</artifactId>
+			<artifactId>wicket-jquery-ui-core</artifactId>
 			<version>6.7.0-SNAPSHOT</version>
 		</dependency>
 		<dependency>
